# cps-embedded-c-lab

./: .gitignore  CMakeLists.txt  README.md
lecture_1/: CMakeLists.txt
lecture_1/bitcounter/: CMakeLists.txt  bitcounter.c
lecture_1/blink/: CMakeLists.txt  blink.c
lecture_1/increase/: CMakeLists.txt  increase.c
lecture_1/slide/: CMakeLists.txt  slide.c
lecture_1/symmetrical/: CMakeLists.txt  symmetrical.c
lecture_2/: CMakeLists.txt
lecture_2/1-1_square_wave/: CMakeLists.txt  square_wave.c
lecture_2/1-2_rectangular_wave/: CMakeLists.txt  rectangular_wave.c
lecture_2/2_pwm/: CMakeLists.txt  pwm.c
lecture_2/3_rgb_led/: CMakeLists.txt  rgb_led.c
lecture_3/: CMakeLists.txt
lecture_3/button_states_advanced/: CMakeLists.txt  button_states_advanced.c
lecture_3/button_states_simple/: CMakeLists.txt  button_states_simple.c
lecture_3/button_without_state_detection/: CMakeLists.txt  button_without_state_detection.c
lecture_3/denoised_button/: CMakeLists.txt  denoised_button.c
lecture_4/: CMakeLists.txt
lecture_4/mcu_temperature/: CMakeLists.txt  mcu_temperature.c
lecture_4/moving_ball/: CMakeLists.txt  ball.h  moving_ball.c
lib/: CMakeLists.txt
lib/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306_drawing.c
lib/ssd1306/include/: ssd1306.h  ssd1306_drawing.h
